Add static css file to the pest-trap form

--- a/templates/pest_trap_form.html
+++ b/templates/pest_trap_form.html
@@ -1,3 +1,6 @@
+{% load static %}
+<p>{% static 'core/styles.css'%}</p>
+<link rel="stylesheet" type="text/css" href="{% static 'core/styles.css' %}" />
 <form id="form" action="/pest-trap-form/" method="post">
     {% csrf_token %}
     {% for field in form %}
