Add styling to pest trap form

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,9 @@
 {% load static %}
-
+<link rel="stylesheet" type="text/css" href="{% static 'reset.css' %}" />
 <!DOCTYPE html>
 <html>
   <head>
     <title>Fruit Fly</title>
-    <link rel="stylesheet" type="text/css" href="{% static 'app/style.css' %}" />
-    {% comment %} <link rel="stylesheet" type="text/css" href="{% static 'app/reset.css' %}" /> {% endcomment %}
     <link rel="icon"href="{% static 'favicon.ico' %}">
   </head>
   <body>
