--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -1,3 +1,4 @@
+{% extends 'base.html' %}
 <h1>Welcome to the Fruit Fly Portal!</h1>
 <a href="{% url 'signup' %}">Sign Up</a>
 <a href="{% url 'login' %}">Login</a>
