--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
   <head>
     <title>Fruit Fly</title>
     <link rel="icon"href="{% static 'favicon.ico' %}">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     {% block content %} {% endblock %}
