Renamed some items and added pest trap table view

--- a/templates/pest_trap_registration.html
+++ b/templates/pest_trap_registration.html
@@ -1,4 +1,4 @@
-<form id="form" action="/pest-trap-form/" method="post">
+<form id="form" action="/pest-trap-registration/" method="post">
     {% csrf_token %}
     {% for field in form %}
         <div class="fieldWrapper">
