--- a/templates/pest_trap_table.html
+++ b/templates/pest_trap_table.html
@@ -1,3 +1,5 @@
+<a href="{% url 'pest-trap-registration' %}">Register a new trap</a>
+
 <table>
     <tr>
         <th>Name</th>
@@ -14,8 +16,3 @@
     </tr>
     {% endfor %}
 </table>
-
-name = models.CharField(max_length=100)
-UniqueId = models.CharField(max_length=50)
-description = models.CharField(max_length=255)
-users = models.ManyToManyField(User, blank=True)
