Fix extends base.html wrapping pages

--- a/templates/core/index.html
+++ b/templates/core/index.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% block content %}
 <h1>Welcome to the Fruit Fly Portal!</h1>
 <a href="{% url 'signup' %}">Sign Up</a>
 <a href="{% url 'login' %}">Login</a>
+{% endblock %}
