Add pestTrap FK to observation form

--- a/templates/observation_form.html
+++ b/templates/observation_form.html
@@ -9,7 +9,7 @@
     <header>
         <h1>Register New Observation</h1>
     </header>
-    <form id="pest-trap-form" class="pest-trap-form" action="/pest-trap-form/" method="post">
+    <form id="pest-trap-form" class="pest-trap-form" action="/observation-form/" method="post">
         {% csrf_token %}
         <div class="pest-trap-form__inputs-wrapper">
             {% for field in form %}
