--- a/templates/observation_registration.html
+++ b/templates/observation_registration.html
@@ -9,7 +9,7 @@
     <header>
         <h1>Register New Observation</h1>
     </header>
-    <form id="pest-trap-form" class="pest-trap-form" action="/observation-form/" method="post">
+    <form id="pest-trap-form" class="pest-trap-form" action="/observation-registration/" method="post">
         {% csrf_token %}
         <div class="pest-trap-form__inputs-wrapper">
             {% for field in form %}
@@ -24,7 +24,7 @@
             </div>
             {% endfor %}
         </div>
-        <button type="submit">Add user</button>
+        <button type="submit">Add Observation</button>
     </form>
 </div>
 {% endblock %}
