--- a/templates/pest_trap_registration.html
+++ b/templates/pest_trap_registration.html
@@ -24,7 +24,7 @@
             </div>
             {% endfor %}
         </div>
-        <button type="submit">Add user</button>
+        <button type="submit">Register Trap</button>
     </form>
 </div>
 {% endblock %}
