--- a/templates/pest_trap_record.html
+++ b/templates/pest_trap_record.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
-{% block title %}Pest Trap Record{% endblock %}
+{% block title %}Pest Trap {{ id }}{% endblock %}
 
 {% block content %}
 {% load static %}
 
-<h1>Pest Trap Record</h1>
+<h1>Pest Trap {{ id }}</h1>
 <h2>Trap Details</h2>
 {% for item in trap %}
 <p>ID: {{ item.id }}</p>
